# UltrafastSecp256k1

./: .gitignore  AGENTS.md  AUDIT_COVERAGE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  PORTING.md  README.md  SECURITY.md  WHY_ULTRAFASTSECP256K1.md  docker-compose.ci.yml  fix_alerts.py  fix_round4.py  ocl_audit_report.json  ocl_audit_report.txt  sonar-project.properties
.clusterfuzzlite/: build.sh
.github/: FUNDING.yml
audit/: AUDIT_TEST_PLAN.md  CMakeLists.txt  audit_ct_namespace.cpp  audit_integration.cpp  audit_invariants.cpp  audit_security.cpp  test_adversarial_protocol.cpp  test_batch_randomness.cpp  test_ecies_regression.cpp  test_exploit_adaptor_extended.cpp  test_exploit_adaptor_parity.cpp  test_exploit_address_generation.cpp  test_exploit_batch_soundness.cpp  test_exploit_bip144_serialization.cpp  test_exploit_bip324_session.cpp  test_exploit_bip32_path_overflow.cpp  test_exploit_bip39_entropy.cpp  test_exploit_bip39_mnemonic.cpp  test_exploit_chacha20_kat.cpp  test_exploit_chacha20_nonce_reuse.cpp  test_exploit_chacha20_poly1305.cpp  test_exploit_ecdh.cpp  test_exploit_ecdh_degenerate.cpp  test_exploit_ecdsa_edge_cases.cpp  test_exploit_ecdsa_recovery.cpp  test_exploit_ecdsa_rfc6979_kat.cpp  test_exploit_ecies_auth.cpp  test_exploit_ecies_encryption.cpp  test_exploit_ellswift.cpp  test_exploit_eth_signing.cpp  test_exploit_ethereum_differential.cpp  test_exploit_frost_byzantine.cpp  test_exploit_frost_dkg.cpp  test_exploit_frost_index.cpp  test_exploit_frost_lagrange_duplicate.cpp  test_exploit_frost_participant_zero.cpp  test_exploit_frost_signing.cpp  test_exploit_frost_threshold_degenerate.cpp  test_exploit_glv_endomorphism.cpp  test_exploit_keccak256_kat.cpp  (+34 more)
audit-output-clang-17/: audit_report.json  audit_report.txt
audit-output-gcc-13/: audit_report.json  audit_report.txt
audit/ci-evidence/: adversarial_protocol_20260315.txt  ecies_regression_20260315.txt  fuzz_address_bip32_ffi_20260315.txt  fuzz_parsers_20260315.txt
audit/platform-reports/: esp32c6-riscv-idf54-bench-hornet.txt  esp32p4-riscv-idf54-bench-hornet.txt
benchmark_results/: benchmark.json  lagging_rows.txt
benchmarks/: README.md
bindings/c_api/: CMakeLists.txt  README.md
bindings/rust/ufsecp/: Cargo.toml
bindings/rust/ufsecp/src/: lib.rs
bindings/rust/ufsecp/tests/: smoke_test.rs
cpu/: CMakeLists.txt
cpu/bench/: bench_bip324.cpp  bench_bip324_transport.cpp  bench_hornet.cpp  bench_unified.cpp  libsecp_provider.c
cpu/fuzz/: fuzz_ecdsa.cpp  fuzz_point.cpp  fuzz_schnorr.cpp
cpu/include/secp256k1/: address.hpp  batch_verify.hpp  bip143.hpp  bip144.hpp  bip324.hpp  bip39.hpp  bip39_wordlist.hpp  debug_invariants.hpp  ecies.hpp  field_52_impl.hpp  frost.hpp  hash_accel.hpp  init.hpp  musig2.hpp  pippenger.hpp  segwit.hpp  sha512.hpp  taproot.hpp  zk.hpp
cpu/include/secp256k1/coins/: coin_address.hpp  coin_params.hpp  eth_signing.hpp  message_signing.hpp  wallet.hpp
cpu/src/: adaptor.cpp  address.cpp  batch_add_affine.cpp  batch_verify.cpp  bip143.cpp  bip144.cpp  bip32.cpp  bip324.cpp  bip39.cpp  chacha20_poly1305.cpp  coin_address.cpp  coin_hd.cpp  ct_sign.cpp  ecdh.cpp  ecdsa.cpp  ecies.cpp  ellswift.cpp  eth_signing.cpp  ethereum.cpp  field.cpp  field_asm_x64_gas.S  frost.cpp  glv.cpp  hash_accel.cpp  hkdf.cpp  message_signing.cpp  multiscalar.cpp  musig2.cpp  pedersen.cpp  pippenger.cpp  point.cpp  precompute.cpp  scalar.cpp  schnorr.cpp  segwit.cpp  selftest.cpp  taproot.cpp  wallet.cpp  zk.cpp
cpu/tests/: run_selftest.cpp  test_batch_add_affine.cpp  test_bip141_143_144.cpp  test_bip324.cpp  test_bip342.cpp  test_bip39.cpp  test_coins.cpp  test_edge_cases.cpp  test_ethereum.cpp  test_multiscalar_batch.cpp  test_v4_features.cpp  test_wallet.cpp  test_zk.cpp
cuda/: CMakeLists.txt  README.md
cuda/include/: batch_verify.cuh  bip32.cuh  bp_gen_table.cuh  ecdh.cuh  ecdsa.cuh  gen_table_w8.cuh  gpu_occupancy.cuh  hash160.cuh  keccak256.cuh  pedersen.cuh  schnorr.cuh  secp256k1.cuh  secp256k1_32_hybrid_final.cuh  zk.cuh
cuda/include/ct/: ct_field.cuh  ct_ops.cuh  ct_point.cuh  ct_scalar.cuh  ct_sign.cuh  ct_zk.cuh
cuda/src/: bench_bip324_transport.cu  bench_bip352.cu  bench_compare.cu  bench_zk.cu  gpu_audit_runner.cu  gpu_bench_unified.cu  test_ct_smoke.cu
docker/: run_ci.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_GUIDE.md  AUDIT_MANIFEST.md  AUDIT_TRACEABILITY.md  BACKEND_ASSURANCE_MATRIX.md  BACKEND_PARITY.md  BENCHMARKING.md  (+32 more)
examples/esp32p4_bench_hornet/main/: CMakeLists.txt  libsecp_bench.h
gpu/: CMakeLists.txt
gpu/include/: gpu_backend.hpp  gpu_cuda_host_helpers.h
gpu/src/: gpu_backend_cuda.cu  gpu_backend_cuda_host.cpp  gpu_backend_metal.mm  gpu_backend_opencl.cpp  gpu_registry.cpp
include/ufsecp/: CMakeLists.txt  SUPPORTED_GUARANTEES.md  ufsecp.h  ufsecp_gpu.h  ufsecp_gpu_impl.cpp  ufsecp_impl.cpp
include/ufsecp/examples/: gpu_example.c
metal/: CMakeLists.txt
metal/include/: host_helpers.h
metal/shaders/: secp256k1_bip32.h  secp256k1_bp_gen_table.h  secp256k1_ct_field.h  secp256k1_ct_ops.h  secp256k1_ct_point.h  secp256k1_ct_scalar.h  secp256k1_ct_sign.h  secp256k1_ct_zk.h  secp256k1_ecdh.h  secp256k1_extended.h  secp256k1_gen_table_w8.h  secp256k1_keccak256.h  secp256k1_kernels.metal  secp256k1_msm.h  secp256k1_pedersen.h  secp256k1_point.h  secp256k1_recovery.h  secp256k1_zk.h
opencl/: CMakeLists.txt
opencl/benchmarks/: bench_bip352_opencl.cpp  bench_opencl.cpp
opencl/include/: secp256k1_opencl.hpp
opencl/kernels/: secp256k1_bip32.cl  secp256k1_bip352.cl  secp256k1_bloom.cl  secp256k1_bp_gen_table.cl  secp256k1_ct_field.cl  secp256k1_ct_ops.cl  secp256k1_ct_point.cl  secp256k1_ct_scalar.cl  secp256k1_ct_sign.cl  secp256k1_ct_zk.cl  secp256k1_ecdh.cl  secp256k1_extended.cl  secp256k1_field.cl  secp256k1_frost.cl  secp256k1_gen_table_w8.cl  secp256k1_keccak256.cl  secp256k1_msm.cl  secp256k1_pedersen.cl  secp256k1_point.cl  secp256k1_recovery.cl  secp256k1_zk.cl
opencl/src/: opencl_audit_runner.cpp  opencl_context.cpp  opencl_selftest.cpp
tests/esp32_audit/main/: CMakeLists.txt
(+78 files in other folders)
